--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+0.2.0 (TBD)
+    * `--track-choice` option to select a subset of tracks to scrobble.
 0.1.0 (2023-08-02):
     * Initial release on GitHub and PyPI.
     * `scrobble` is intended to be a general/omni-scrobbling tool that works with different tracklists.
